# PZIP

./: .gitignore  CMakeLists.txt  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Encoder.ixx  File_IO.cpp  File_IO.h  Main.cpp  PZIP.sln  PZIP.vcxproj  PZIP.vcxproj.filters  README.md
include/: Encoder.h  File_IO.h
src/: Decoder.cpp  Encoder.cpp  File_IO.cpp  main.cpp
tests/: CMakeLists.txt  EncoderTest.cpp
